# no_detection_area_module

./: CMakeLists.txt  README.md  package.xml
config/: config.yaml
launch/: object_exclude_on_lanelet_filter.launch.py  object_exclude_on_lanelet_filter_tracked.launch.py  object_exclude_on_lanelet_filter_withfeature.launch.py
src/: object_exclude_on_lanelet.cpp  object_exclude_on_lanelet_tracked.cpp  object_exclude_on_lanelet_withfeature.cpp
