<?xml version="1.0"?>
<package format="3">
  <name>no_detection_area_module</name>
  <version>0.1.0</version>
  <description>Filters detected objects if they lie within specified Lanelet2 subtype areas</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>autoware_auto_mapping_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_planning_msgs</depend>

  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_extension</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

